# rooBroker

./: .gitignore  .modelstate.json  .pre-commit-config.yaml  .secrets.baseline  README.md  TestMode.txt  lmstudio_context_proxy.py  lmstudio_deepeval.py  lmstudio_model_discovery.py  lmstudio_modelstate.py  lmstudio_roomodes.py  main.py  pyproject.toml  requirements.txt
benchmarks/python/advanced/: algorithm_complex.json  class_class_implementation.json
benchmarks/python/basic/: context_context_window.json  statement_simple_statement.json
docs/: # Code Citations.md  refactoring_plan.md
src/rooBroker/: actions.py  interactive_actions.py  main.py  main_cli.py  main_interactive.py
src/rooBroker/core/: __init__.py  benchmarking.py  big_bench.py  discovery.py  log_config.py  mode_management.py  proxy.py  state.py
src/rooBroker/interfaces/: base.py
src/rooBroker/interfaces/lmstudio/: client.py
src/rooBroker/interfaces/ollama/: client.py
src/rooBroker/lmstudio/: analysis.py  benchmark.py  client.py  code_quality.py  config.py  context_proxy.py  deepeval.py  discovery.py  model_discovery.py  modelstate.py  promptwizard.py  temp_evaluate.py  timeout.py
src/rooBroker/roo_types/: __init__.py  benchmark_schemas.py  benchmarking.py  discovery.py  models.py  modes.py  settings.py
src/rooBroker/roomodes/: __init__.py  analysis_parsing.py  mode_generation.py  update.py  utils.py
src/rooBroker/ui/: common_formatters.py  interactive_layout.py  interactive_utils.py  menu_manager.py
tests/core/: test_state.py
