[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roobroker"
version = "0.1.0"
authors = [
  { name="Heratiki", email="heratiki@gmail.com" },
]
description = "RooBroker Local LLM Model Optimizer"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.isort]
profile = "black"
multi_line_output = 3
