[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "roobroker"
version = "0.1.0"
description = "RooBroker Local LLM Model Optimizer"
authors = ["Heratiki <heratiki@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9"
rich = "^13.0.0"
requests = "^2.31.0"
typing-extensions = "^4.5.0"
types-requests = "^2.28.11.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.0.0"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.isort]
profile = "black"
multi_line_output = 3
